In SDK example complextoolbarcontrols, I set a bad value for URE_BOOTSTRAP and then unopkg terminated with a segfault. The values of that envar, bad and intended, are vnd.sun.star.pathname=/home/terry/lo_hacking/git/libo6/instdir/program/fundamentalrc vnd.sun.star.pathname:/home/terry/lo_hacking/git/libo6/instdir/program/fundamentalrc These observations are of LibreOffice commit df3b7599 (2022-08-13 18:23 Z), built and running on debian-buster, with autogen.input ... --with-vendor=Terrence Enger --with-jdk-home=/usr/lib/jvm/default-java --enable-split-debug --enable-gdb-index --enable-ld=gold --enable-option-checking=fatal --enable-dbgutil --enable-debug --without-system-postgresql --without-myspell-dicts --with-extra-buildid --without-doxygen --with-external-tar=/home/terry/lo_hacking/git/src --without-package-format --enable-odk # (2022-08-06, tje) On debian-buster, g++ 8.3.0 compiling idxdict.cxx # complains # ... unrecognized command line option -Wdeprecated-copy-dtor CXXFLAGS=-Wno-deprecated-copy-dtor
Created attachment 181788 [details] typescript with segfault The following points within the typescript may be of interest line what ---- ---- 3 general introduction 13 setsdkenv_unix; set SAL_USE_VCLPLUGIN and UNO_PATH 56 export URE_BOOTSTRAP with bad value 61 make 122 unopkg; segfault 125 gdb 146 run 153 backtrace 162 backtrace full 180 for comparison, URE_BOOTSTRAP with intended value 188 make 199 good completion
Adding Stephan Bergmann to cc.
Stephan Bergmann committed a patch related to this issue. It has been pushed to "master": https://git.libreoffice.org/core/commit/fe033eebec7db71010beb6df14f7a08aded471be tdf#150427 Gracefully handle potentially unset logger It will be available in 7.5.0. The patch should be included in the daily builds available at https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More information about daily builds can be found at: https://wiki.documentfoundation.org/Testing_Daily_Builds Affected users are encouraged to test the fix and report feedback.
In commit addcd016 (2022-08-16 14:40Z), built and running on debian-buster, the segfault is gone. Thank you, Stephan. I am setting status VERIFIED FIXED.