tdf#150427 Gracefully handle potentially unset logger

Change-Id: I237e3b5da042cbfa3fde1a02043ab69cc0711296
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/138353
Tested-by: Jenkins
Reviewed-by: Stephan Bergmann <sbergman@redhat.com>